# DailyTaskForMaa

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cronUpdate.sh  docker-compose.yml  down.sh  start.sh
cfg/: conf.json
initdb/: MAABackendDB.sql  MAAUser.sql
quickTaskExample/: MAAClient.py  PlanClient.py  Rouge.json  SSReOpen.json  StrategyDeleteExample.json  StrategyExample.json  StrategyModifyExample.json  TaskClient.py
src/: CMakeLists.txt  main.cpp
src/conf/: conf.cpp  conf.h
src/handler/: getStrategy.cpp  getStrategy.h  getTask.cpp  getTask.h  handler.cpp  handler.h  quickTask.cpp  quickTask.h  reportStatus.cpp  reportStatus.h  updateLevel.cpp  updateLevel.h  updateStrategy.cpp  updateStrategy.h
src/levelManager/: CMakeLists.txt  levelManager.cpp  levelManager.h  permanentLevelGenerator.cpp
src/mysqlConnectPool/: CMakeLists.txt  sqlConnectPool.cpp  sqlConnectPool.h  testConnect.cpp
src/router/: router.cpp  router.h
src/sqlMap/: sqlMap.cpp  sqlMap.h
src/utils/: jsonUtil.hpp  regUtil.hpp  timeUtil.hpp  uuid.hpp
